--- a/index.html
+++ b/index.html
@@ -5,8 +5,80 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">Продвинутый HTML и CSS</a>».</p>
-
+    <header class="main-header">
+      <nav class="main-header__navigation">
+        <ul class="main-header__list">
+          <li class="main-header__item"><a class="main-header__item-link" href="#">Главная</a></li>
+          <li class="main-header__item"><a class="main-header__item-link" href="#">Фото и видео</a></li>
+          <li class="main-header__item"><a class="main-header__item-link" href="#">Форма отзыва</a></li>
+          <li class="main-header__item"><a class="main-header__item-link" href="#">HTML Academy</a></li>
+        </ul>
+      </nav>
+      <button class="main-header__close-menu">Закрыть</button>
+      <div class="div main-header__menu-wrap">
+        <div class="main-header__logo"><img src="#" alt="City Sedona"></div>
+        <button class="main-header__menu-btn" type="button">Меню</button>
+      </div>
+    </header>
+    <div class="top-promo">
+      <div class="top-promo__slogan-layout"><img src="#" alt="Sedona" class="top-promo__logo-title"></div>
+    </div>
+    <section class="features1">
+      <header class="features1__head">
+        <h1 class="features1__title">Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
+        <p class="features1__number-fetures">- №1 -</p>
+        <p class="features1__about-features">Седона не атракцион для туристов, там тчет своя жизнь</p>
+      </header>
+      <img src="#" alt="City" class="features1__image">
+      <h2 class="features1__housing">Жилье</h2>
+      <p class="features1__housing-about">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+      <h2 class="features1__suvenirs">Сувениры</h2>
+      <p class="features1__suvenirs-about">Не только китайкого, но и местного производства!</p>
+      <h2 class="features__food">Еда</h2>
+      <p class="features__food-about">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+    </section>
+    <section class="features2">
+      <header class="features2__head">
+        <h1 class="features2__title">Там есть мост дьявола</h1>
+        <p class="features2__number-features">- №2 -</p>
+        <p class="features2__about-features">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+      </header>
+      <img src="#" alt="Каньон" class="features2__picture">
+    </section>
+    <section class="features3">
+      <h1 class="features3__title">Небольшая площадь</h1>
+      <p class="features3__number-features">- №3 -</p>
+      <p class="features3__features-about">Все достопримечательности находятся очень близко</p>
+    </section>
+    <section class="features4">
+      <h1 class="features4__title">Красива дорога</h1>
+      <p class="features4__number-features">- №4 -</p>
+      <p class="features4__features-about">Ехать в седону из Лас-Вегаса совсем не скучно!</p>
+    </section>
+    <section class="features5">
+      <h1 class="features4__title">Мало туристов</h1>
+      <p class="features4__number-features">- №5 -</p>
+      <p class="features4__features-about">Большинство едет в гранд каньон и толпится там</p>
+    </section>
+    <section class="location">
+      <h2 class="location__title">Заинтересовались?</h2>
+      <p class="location__about">Укажите предпологаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+      <button class="location__button">Найти гостиницу</button>
+    </section>
+    <div class="map">
+      <div class="map__layout"></div>
+    </div>
+    <footer class="main-footer">
+      <p class="main-footer__hash"></p>
+      <ul class="main-footer__socials">
+        <li class="main-footer_item"><a href="#" class="main-footer__link">Twit</a></li>
+        <li class="main-footer_item"><a href="#" class="main-footer__link">FB</a></li>
+        <li class="main-footer_item"><a href="#" class="main-footer__link">Youtube</a></li>
+      </ul>
+      <div class="main-footer__copyright-wrap">
+        <p class="main-footer__copyright">Разаботано</p>
+        <a href="#" class="main-footer__copyright-img"><img src="#" alt="HTML Academy"></a>
+      </div>
+    </footer>
   </body>
 </html>
