--- a/form.html
+++ b/form.html
@@ -16,94 +16,98 @@
       </nav>
       <button class="main-header__close-menu">Закрыть</button>
       <div class="div main-header__menu-wrap">
-        <div class="main-header__logo"><img src="#" alt="City Sedona"></div>
+        <div class="main-header__logo">
+          <img src="#" alt="City Sedona">
+        </div>
         <button class="main-header__menu-btn" type="button">Меню</button>
       </div>
     </header>
-    <div class="img-title"><img src="#" alt="Седона" class="img-title__picture"></div>
+    <div class="img-title">
+      <img class="img-title__picture" src="#" alt="Седона">
+    </div>
     <section class="explanation">
       <h2 class="explanation__title">Оставьте свой отзыв</h2>
       <p class="explanation__about">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
     </section>
-    <form method="get" class="form" action="https://echo.htmlacademy.ru/">
-      <fieldset class="form__person person">
-        <legend class="person-title">Представьтесь:</legend>
-        <div class="person__wrap">
-          <label class="person__label" for="name1">Имя*:</label>
-          <input class="person__input" type="text" id="name1" placeholder="Петр" name="name-first">
-        </div>
-        <div class="person__wrap">
-          <label class="person__label" for="name2">Фамилия*:</label>
-          <input class="person__input" type="text" id="name2" placeholder="Иванов" name="name-mid">
-        </div>
-        <div class="person__wrap">
-          <label class="person__label" for="name3">Отчество</label>
-          <input class="person__input" type="text" id="name3" placeholder="Александрович" name="name-last">
-        </div>
-      </fieldset>
-      <fieldset class="form__contact-inf contact-inf">
-        <legend class="contact-inf__title">Контактная информация:</legend>
-        <div class="contact-inf__wrap">
-          <label for="contact1" class="contact-inf__label">Контактный телефон*:</label>
-          <input type="text" class="contact-inf__input" id="contact1" placeholder="Введите телефон" name="tel">
-        </div>
-        <div class="contact-inf__wrap">
-          <label for="contact2" class="contact-inf__label">Электронная почта*:</label>
-          <input type="email" class="contact-inf__input" id="contact2" placeholder="Введите e-mail" name="email">
-        </div>
-      </fieldset>
-      <fieldset class="form__impression impression">
-        <legend class="impression__title">Ваше впечатление:</legend>
-        <div class="impression-layout">
-          <input type="radio" class="impression__input" id="impression1" name="impression" checked>
-          <label for="impression1" class="impression__label">Скорее положительное</label>
-        </div>
-        <div class="impression-layout">
-          <input type="radio" class="impression__input" id="impression2" name="impression">
-          <label for="impression2" class="impression__label">Скорее отрицательное</label>
-        </div>
-        <div class="impression-layout">
-          <input type="radio" class="impression__input" id="impression3" name="impression">
-          <label for="impression3" class="impression__label">Затрудняюсь ответить</label>
-        </div>
-      </fieldset>
-      <fieldset class="form__attraction attraction">
-        <legend class="attraction__title">Посещенные достопримечательности:</legend>
-        <div class="attraction_layout">
-          <input type="checkbox" class="attraction__input" name="attraction" id="attraction1" checked>
-          <label for="attraction1" class="attraction__label">Мост Дьявола</label>
-        </div>
-        <div class="attraction_layout">
-          <input type="checkbox" class="attraction__input" name="attraction" id="attraction2" checked>
-          <label for="attraction2" class="attraction__label">Слайд-парк</label>
-        </div>
-        <div class="attraction_layout">
-          <input type="checkbox" class="attraction__input" name="attraction" id="attraction3">
-          <label for="attraction3" class="attraction__label">Гора-Колокол</label>
-        </div>
-        <div class="attraction_layout">
-          <input type="checkbox" class="attraction__input" name="attraction" id="attraction4" checked>
-          <label for="attraction4" class="attraction__label">Красные скалы</label>
-        </div>
-      </fieldset>
-      <fieldset class="form__emotions emotions">
-        <legend class="emotions__title">Опишите свои эмоции:</legend>
-        <div class="emotions__layout">
-          <textarea name="textarea" cols="30" rows="10" class="emotions__text" placeholder="Опишите подробно свои восторги"></textarea>
-        </div>
-      </fieldset>
+    <form class="form" method="get" action="https://echo.htmlacademy.ru/">
+      <div class="form__person person">
+        <div class="person-title">Представьтесь:</div>
+        <label class="person__label">
+          <span class="person__label-text">Имя*:</span>
+          <input class="person__input" type="text" placeholder="Петр" name="name-first">
+        </label>
+        <label class="person__label">
+          <span class="person__label-text">Фамилия*:</span>
+          <input class="person__input" type="text" placeholder="Иванов" name="name-mid">
+        </label>
+        <label class="person__label">
+          <span class="person__label-text">Отчество</span>
+          <input class="person__input" type="text" placeholder="Александрович" name="name-last">
+        </label>
+      </div>
+      <div class="form__contact-inf contact-inf">
+        <div class="contact-inf__title">Контактная информация:</div>
+        <label class="contact-inf__label">
+          <span class="contact-inf__label-text">Контактный телефон*:</span>
+          <input class="contact-inf__input" type="text" placeholder="Введите телефон" name="tel">
+        </label>
+        <label class="contact-inf__label">
+          <span class="contact-inf__label-text">Электронная почта*:</span>
+          <input class="contact-inf__input" type="email" placeholder="Введите e-mail" name="email">
+        </label>
+      </div>
+      <div class="form__impression impression">
+        <div class="impression__title">Ваше впечатление:</div>
+        <label class="impression__label">
+          <input class="impression__input" type="radio" name="impression" checked>
+          <span class="impression__label-text">Скорее положительное</span>
+        </label>
+        <label class="impression__label">
+          <input class="impression__input" type="radio" name="impression">
+          <span class="impression__label-text">Скорее отрицательное</span>
+        </label>
+        <label class="impression__label">
+          <input class="impression__input" type="radio" name="impression">
+          <span class="impression__label-text">Затрудняюсь ответить</span>
+        </label>
+      </div>
+      <div class="form__attraction attraction">
+        <div class="attraction__title">Посещенные достопримечательности:</div>
+        <label class="attraction__label">
+          <input class="attraction__input" type="checkbox" name="attraction" checked>
+          <span class="attraction__label-text">Мост Дьявола</span>
+        </label>
+        <label class="attraction__label">
+          <input class="attraction__input" type="checkbox" name="attraction" checked>
+          <span class="attraction__label-text">Слайд-парк</span>
+        </label>
+        <label class="attraction__label">
+          <input class="attraction__input" type="checkbox" name="attraction">
+          <span class="attraction__label-text">Гора-Колокол</span>
+        </label>
+        <label class="attraction__label">
+          <input class="attraction__input" type="checkbox" name="attraction" checked>
+          <span class="attraction__label-text">Красные скалы</span>
+        </label>
+      </div>
+      <div class="form__emotions emotions">
+        <div class="emotions__title">Опишите свои эмоции:</div>
+        <textarea class="emotions__text" name="textarea" cols="30" rows="10" placeholder="Опишите подробно свои восторги"></textarea>
+      </div>
       <button class="form__btn" type="submit">Отправить отзыв</button>
     </form>
     <footer class="main-footer">
       <p class="main-footer__hash"></p>
-      <ul class="main-footer__socials">
-        <li class="main-footer_item"><a href="#" class="main-footer__link">Twit</a></li>
-        <li class="main-footer_item"><a href="#" class="main-footer__link">FB</a></li>
-        <li class="main-footer_item"><a href="#" class="main-footer__link">Youtube</a></li>
-      </ul>
+      <div class="main-footer__socials">
+        <a class="main-footer__link" href="#">Twit</a>
+        <a class="main-footer__link" href="#">FB</a>
+        <a class="main-footer__link" href="#">Youtube</a>
+      </div>
       <div class="main-footer__copyright-wrap">
         <p class="main-footer__copyright">Разаботано</p>
-        <a href="#" class="main-footer__copyright-img"><img src="#" alt="HTML Academy"></a>
+        <a class="main-footer__copyright-img" href="#">
+          <img src="#" alt="HTML Academy">
+        </a>
       </div>
     </footer>
   </body>
