--- a/index.html
+++ b/index.html
@@ -16,68 +16,86 @@
       </nav>
       <button class="main-header__close-menu">Закрыть</button>
       <div class="div main-header__menu-wrap">
-        <div class="main-header__logo"><img src="#" alt="City Sedona"></div>
+        <div class="main-header__logo">
+          <img src="#" alt="City Sedona">
+        </div>
         <button class="main-header__menu-btn" type="button">Меню</button>
       </div>
     </header>
-    <div class="top-promo">
-      <div class="top-promo__slogan-layout"><img src="#" alt="Sedona" class="top-promo__logo-title"></div>
+    <div class="promo-view">
+      <div class="promo-view__slogan-layout">
+        <img class="promo-view__logo-title" src="#" alt="Sedona">
+      </div>
+    </div>
+    <div class="main-title">
+      <h1 class="main-title__title">Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
+      <p class="main-title__reason">Рассмотрим 5 причин, по которым седона круче чем гранд каньон!</p>
     </div>
     <section class="features1">
       <header class="features1__head">
-        <h1 class="features1__title">Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
-        <p class="features1__number-fetures">- №1 -</p>
+        <h2 class="features1__title">Настоящий городок</h2>
+        <span class="features1__number-fetures">- №1 -</span>
         <p class="features1__about-features">Седона не атракцион для туристов, там тчет своя жизнь</p>
       </header>
-      <img src="#" alt="City" class="features1__image">
-      <h2 class="features1__housing">Жилье</h2>
-      <p class="features1__housing-about">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-      <h2 class="features1__suvenirs">Сувениры</h2>
-      <p class="features1__suvenirs-about">Не только китайкого, но и местного производства!</p>
-      <h2 class="features__food">Еда</h2>
-      <p class="features__food-about">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+      <img class="features1__image" src="#" alt="City">
+      <div class="features1__entertainment">
+        <div class="features1__housing_layout">
+          <h3 class="features1__housing">Жилье</h3>
+          <p class="features1__housing-about">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+        </div>
+        <div class="features1__suvenirs-layout">
+          <h3 class="features1__suvenirs">Сувениры</h3>
+          <p class="features1__suvenirs-about">Не только китайкого, но и местного производства!</p>
+        </div>
+        <div class="features1__food-layout">
+          <h3 class="features__food">Еда</h3>
+          <p class="features__food-about">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+        </div>
+      </div>
     </section>
     <section class="features2">
-      <header class="features2__head">
-        <h1 class="features2__title">Там есть мост дьявола</h1>
-        <p class="features2__number-features">- №2 -</p>
+      <div class="features2__head">
+        <h2 class="features2__title">Там есть мост дьявола</h2>
+        <span class="features2__number-features">- №2 -</span>
         <p class="features2__about-features">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-      </header>
+      </div>
       <img src="#" alt="Каньон" class="features2__picture">
     </section>
     <section class="features3">
-      <h1 class="features3__title">Небольшая площадь</h1>
-      <p class="features3__number-features">- №3 -</p>
+      <h2 class="features3__title">Небольшая площадь</h2>
+      <span class="features3__number-features">- №3 -</span>
       <p class="features3__features-about">Все достопримечательности находятся очень близко</p>
     </section>
     <section class="features4">
       <h1 class="features4__title">Красива дорога</h1>
-      <p class="features4__number-features">- №4 -</p>
+      <span class="features4__number-features">- №4 -</span>
       <p class="features4__features-about">Ехать в седону из Лас-Вегаса совсем не скучно!</p>
     </section>
     <section class="features5">
-      <h1 class="features4__title">Мало туристов</h1>
-      <p class="features4__number-features">- №5 -</p>
+      <h2 class="features4__title">Мало туристов</h2>
+      <span class="features4__number-features">- №5 -</span>
       <p class="features4__features-about">Большинство едет в гранд каньон и толпится там</p>
     </section>
     <section class="location">
       <h2 class="location__title">Заинтересовались?</h2>
       <p class="location__about">Укажите предпологаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
-      <button class="location__button">Найти гостиницу</button>
+      <button class="location__button" type="button">Найти гостиницу</button>
     </section>
     <div class="map">
       <div class="map__layout"></div>
     </div>
     <footer class="main-footer">
       <p class="main-footer__hash"></p>
-      <ul class="main-footer__socials">
-        <li class="main-footer_item"><a href="#" class="main-footer__link">Twit</a></li>
-        <li class="main-footer_item"><a href="#" class="main-footer__link">FB</a></li>
-        <li class="main-footer_item"><a href="#" class="main-footer__link">Youtube</a></li>
-      </ul>
+      <div class="main-footer__socials">
+        <a class="main-footer__link" href="#">Twit</a>
+        <a class="main-footer__link" href="#">FB</a>
+        <a class="main-footer__link" href="#">Youtube</a>
+      </div>
       <div class="main-footer__copyright-wrap">
         <p class="main-footer__copyright">Разаботано</p>
-        <a href="#" class="main-footer__copyright-img"><img src="#" alt="HTML Academy"></a>
+        <a class="main-footer__copyright-img" href="#">
+          <img src="#" alt="HTML Academy">
+        </a>
       </div>
     </footer>
   </body>
