--- a/photo.html
+++ b/photo.html
@@ -15,59 +15,75 @@
         </ul>
       </nav>
       <button class="main-header__close-menu">Закрыть</button>
-      <div class="div main-header__menu-wrap">
-        <div class="main-header__logo"><img src="#" alt="City Sedona"></div>
+      <div class="main-header__menu-wrap">
+        <div class="main-header__logo">
+          <img src="#" alt="City Sedona">
+        </div>
         <button class="main-header__menu-btn" type="button">Меню</button>
       </div>
     </header>
-    <div class="img-title"><img src="#" alt="Седона" class="img-title__picture"></div>
+    <div class="img-title">
+      <img class="img-title__picture" src="#" alt="Седона">
+    </div>
     <section class="media">
       <header class="media__head">
-        <h2 class="media__title">Фото и видео</h2>
+        <h1 class="media__title">Фото и видео</h1>
         <p class="media__motivation">Не можете решиться на путешествия из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
       </header>
-      <ul class="media__photo photo">
-        <li class="photo__item">
-          <div class="photo__img"><img src="#" alt="фото1"></div>
-          <h3 class="photo__title">Неродные просторы</h3>
+      <section class="media__photo photo">
+        <figure class="photo__item">
+          <img class="photo__img" src="#" alt="фото1">
+          <figcaption class="photo__title">Неродные просторы</figcaption>
           <p class="photo__about">Автор фото: Борис</p>
-          <p class="photo__number-likes">1350</p>
-        </li>
-        <li class="photo__item">
-          <div class="photo__img"><img src="#" alt="фото2"></div>
-          <h3 class="photo__title">Местная растительность</h3>
+          <a class="photo__number-likes">1350</a>
+        </figure>
+        <figure class="photo__item">
+          <img class="photo__img" src="#" alt="фото2">
+          <figcaption class="photo__title">Местная растительность</figcaption>
           <p class="photo__about">Автор фото: Сергей</p>
-          <p class="media__number-likes">143</p>
-        </li>
-        <li class="photo__item">
-          <div class="photo__img"><img src="#" alt="фото3"></div>
-          <h3 class="photo__title">Дорога на север</h3>
+          <a class="media__number-likes">143</a>
+        </figure>
+        <figure class="photo__item">
+          <img class="photo__img" src="#" alt="фото3">
+          <figcaption class="photo__title">Дорога на север</figcaption>
           <p class="photo__about">Автор фото: Петр</p>
-          <p class="photo__number-likes">96</p>
-        </li>
-        <li class="photo__item">
-          <div class="photo__img"><img src="#" alt="фото4"></div>
-          <h3 class="photo__title">Мост дьявола</h3>
+          <a class="photo__number-likes">96</a>
+        </figure>
+        <figure class="photo__item">
+          <img class="photo__img" src="#" alt="фото4">
+          <figcaption class="photo__title">Мост дьявола</figcaption>
           <p class="photo__about">Автор фото: Антон</p>
-          <p class="photo__number-likes">254</p>
-        </li>
-      </ul>
+          <a class="photo__number-likes">254</a>
+        </figure>
+      </section>
       <section class="media__video video">
         <h2 class="vide__title">Ещё сомневаетесь?</h2>
         <p class="video__about">Смотрите видеопрезентацию и скорееза билетами, пока они не подорожали в очередной раз!</p>
-        <video src="#" class="video__video-track"></video>
+        <div class="video__video-player">
+          <div class="video__remote-layout">
+            <div class="video__remote-line"></div>
+            <div class="video__remote-dot"></div>
+          </div>
+          <div class="video__userbar-layout">
+            <button class="video__replay" type="button">Видео сначала</button>
+            <button class="video__subtitle" type="button">Субтитры</button>
+            <button class="video__full-screan" type="button">Полный экран</button>
+          </div>
+        </div>
       </section>
     </section>
     <footer class="main-footer">
       <p class="main-footer__hash"></p>
-      <ul class="main-footer__socials">
-        <li class="main-footer_item"><a href="#" class="main-footer__link">Twit</a></li>
-        <li class="main-footer_item"><a href="#" class="main-footer__link">FB</a></li>
-        <li class="main-footer_item"><a href="#" class="main-footer__link">Youtube</a></li>
-      </ul>
+      <div class="main-footer__socials">
+        <a class="main-footer__link" href="#">Twit</a>
+        <a class="main-footer__link" href="#">FB</a>
+        <a class="main-footer__link" href="#">Youtube</a>
+      </div>
       <div class="main-footer__copyright-wrap">
         <p class="main-footer__copyright">Разаботано</p>
-        <a href="#" class="main-footer__copyright-img"><img src="#" alt="HTML Academy"></a>
+        <a class="main-footer__copyright-img" href="#">
+          <img src="#" alt="HTML Academy">
+        </a>
       </div>
     </footer>
   </body>
