--- a/form.html
+++ b/form.html
@@ -15,7 +15,7 @@
         </ul>
       </nav>
       <button class="main-header__close-menu">Закрыть</button>
-      <div class="div main-header__menu-wrap">
+      <div class="main-header__menu-wrap">
         <div class="main-header__logo">
           <img src="#" alt="City Sedona">
         </div>
@@ -31,7 +31,7 @@
     </section>
     <form class="form" method="get" action="https://echo.htmlacademy.ru/">
       <div class="form__person person">
-        <div class="person-title">Представьтесь:</div>
+        <h2 class="person-title">Представьтесь:</h2>
         <label class="person__label">
           <span class="person__label-text">Имя*:</span>
           <input class="person__input" type="text" placeholder="Петр" name="name-first">
@@ -46,7 +46,7 @@
         </label>
       </div>
       <div class="form__contact-inf contact-inf">
-        <div class="contact-inf__title">Контактная информация:</div>
+        <h2 class="contact-inf__title">Контактная информация:</h2>
         <label class="contact-inf__label">
           <span class="contact-inf__label-text">Контактный телефон*:</span>
           <input class="contact-inf__input" type="text" placeholder="Введите телефон" name="tel">
@@ -57,7 +57,7 @@
         </label>
       </div>
       <div class="form__impression impression">
-        <div class="impression__title">Ваше впечатление:</div>
+        <h2 class="impression__title">Ваше впечатление:</h2>
         <label class="impression__label">
           <input class="impression__input" type="radio" name="impression" checked>
           <span class="impression__label-text">Скорее положительное</span>
@@ -72,7 +72,7 @@
         </label>
       </div>
       <div class="form__attraction attraction">
-        <div class="attraction__title">Посещенные достопримечательности:</div>
+        <h2 class="attraction__title">Посещенные достопримечательности:</h2>
         <label class="attraction__label">
           <input class="attraction__input" type="checkbox" name="attraction" checked>
           <span class="attraction__label-text">Мост Дьявола</span>
@@ -91,17 +91,17 @@
         </label>
       </div>
       <div class="form__emotions emotions">
-        <div class="emotions__title">Опишите свои эмоции:</div>
+        <h2 class="emotions__title">Опишите свои эмоции:</h2>
         <textarea class="emotions__text" name="textarea" cols="30" rows="10" placeholder="Опишите подробно свои восторги"></textarea>
       </div>
       <button class="form__btn" type="submit">Отправить отзыв</button>
     </form>
     <footer class="main-footer">
       <p class="main-footer__hash"></p>
-      <div class="main-footer__socials">
-        <a class="main-footer__link" href="#">Twit</a>
-        <a class="main-footer__link" href="#">FB</a>
-        <a class="main-footer__link" href="#">Youtube</a>
+      <div class="main-footer__socials socials">
+        <a class="socials__link" href="#">Twit</a>
+        <a class="socials__link" href="#">FB</a>
+        <a class="socials__link" href="#">Youtube</a>
       </div>
       <div class="main-footer__copyright-wrap">
         <p class="main-footer__copyright">Разаботано</p>
