--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </ul>
       </nav>
       <button class="main-header__close-menu">Закрыть</button>
-      <div class="div main-header__menu-wrap">
+      <div class="main-header__menu-wrap">
         <div class="main-header__logo">
           <img src="#" alt="City Sedona">
         </div>
@@ -31,50 +31,50 @@
       <h1 class="main-title__title">Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
       <p class="main-title__reason">Рассмотрим 5 причин, по которым седона круче чем гранд каньон!</p>
     </div>
-    <section class="features1">
-      <header class="features1__head">
-        <h2 class="features1__title">Настоящий городок</h2>
-        <span class="features1__number-fetures">- №1 -</span>
-        <p class="features1__about-features">Седона не атракцион для туристов, там тчет своя жизнь</p>
+    <section class="features-place">
+      <header class="features-place__head">
+        <h2 class="features-place__title">Настоящий городок</h2>
+        <span class="features-place__number-fetures">- №1 -</span>
+        <p class="features-place__about-features">Седона не атракцион для туристов, там тчет своя жизнь</p>
       </header>
-      <img class="features1__image" src="#" alt="City">
-      <div class="features1__entertainment">
-        <div class="features1__housing_layout">
-          <h3 class="features1__housing">Жилье</h3>
-          <p class="features1__housing-about">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+      <img class="features-place__image" src="#" alt="City">
+      <div class="features-place__entertainment">
+        <div class="features-place__housing_layout">
+          <h3 class="features-place__housing">Жилье</h3>
+          <p class="features-place__housing-about">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
         </div>
-        <div class="features1__suvenirs-layout">
-          <h3 class="features1__suvenirs">Сувениры</h3>
-          <p class="features1__suvenirs-about">Не только китайкого, но и местного производства!</p>
+        <div class="features-place__suvenirs-layout">
+          <h3 class="features-place__suvenirs">Сувениры</h3>
+          <p class="features-place__suvenirs-about">Не только китайкого, но и местного производства!</p>
         </div>
-        <div class="features1__food-layout">
-          <h3 class="features__food">Еда</h3>
-          <p class="features__food-about">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+        <div class="features-place__food-layout">
+          <h3 class="features-place__food">Еда</h3>
+          <p class="features-place__food-about">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
         </div>
       </div>
     </section>
-    <section class="features2">
-      <div class="features2__head">
-        <h2 class="features2__title">Там есть мост дьявола</h2>
-        <span class="features2__number-features">- №2 -</span>
-        <p class="features2__about-features">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+    <section class="features-bridge">
+      <div class="features-bridge__head">
+        <h2 class="features-bridge__title">Там есть мост дьявола</h2>
+        <span class="features-bridge__number-features">- №2 -</span>
+        <p class="features-bridge__about-features">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
       </div>
-      <img src="#" alt="Каньон" class="features2__picture">
+      <img src="#" alt="Каньон" class="features-bridge__picture">
     </section>
-    <section class="features3">
-      <h2 class="features3__title">Небольшая площадь</h2>
-      <span class="features3__number-features">- №3 -</span>
-      <p class="features3__features-about">Все достопримечательности находятся очень близко</p>
+    <section class="features-area">
+      <h2 class="features-area__title">Небольшая площадь</h2>
+      <span class="features-area__number-features">- №3 -</span>
+      <p class="features-area__features-about">Все достопримечательности находятся очень близко</p>
     </section>
-    <section class="features4">
-      <h1 class="features4__title">Красива дорога</h1>
-      <span class="features4__number-features">- №4 -</span>
-      <p class="features4__features-about">Ехать в седону из Лас-Вегаса совсем не скучно!</p>
+    <section class="features-road">
+      <h1 class="features-road__title">Красива дорога</h1>
+      <span class="features-road__number-features">- №4 -</span>
+      <p class="features-road__features-about">Ехать в седону из Лас-Вегаса совсем не скучно!</p>
     </section>
-    <section class="features5">
-      <h2 class="features4__title">Мало туристов</h2>
-      <span class="features4__number-features">- №5 -</span>
-      <p class="features4__features-about">Большинство едет в гранд каньон и толпится там</p>
+    <section class="features-tourists">
+      <h2 class="features-tourists__title">Мало туристов</h2>
+      <span class="features-tourists__number-features">- №5 -</span>
+      <p class="features-tourists__features-about">Большинство едет в гранд каньон и толпится там</p>
     </section>
     <section class="location">
       <h2 class="location__title">Заинтересовались?</h2>
@@ -86,10 +86,10 @@
     </div>
     <footer class="main-footer">
       <p class="main-footer__hash"></p>
-      <div class="main-footer__socials">
-        <a class="main-footer__link" href="#">Twit</a>
-        <a class="main-footer__link" href="#">FB</a>
-        <a class="main-footer__link" href="#">Youtube</a>
+      <div class="main-footer__socials socials">
+        <a class="socials__link" href="#">Twit</a>
+        <a class="socials__link" href="#">FB</a>
+        <a class="socials__link" href="#">Youtube</a>
       </div>
       <div class="main-footer__copyright-wrap">
         <p class="main-footer__copyright">Разаботано</p>
