--- a/photo.html
+++ b/photo.html
@@ -74,10 +74,10 @@
     </section>
     <footer class="main-footer">
       <p class="main-footer__hash"></p>
-      <div class="main-footer__socials">
-        <a class="main-footer__link" href="#">Twit</a>
-        <a class="main-footer__link" href="#">FB</a>
-        <a class="main-footer__link" href="#">Youtube</a>
+      <div class="main-footer__socials socials">
+        <a class="socials__link" href="#">Twit</a>
+        <a class="socials__link" href="#">FB</a>
+        <a class="socials__link" href="#">Youtube</a>
       </div>
       <div class="main-footer__copyright-wrap">
         <p class="main-footer__copyright">Разаботано</p>
