module3 error correction

--- a/photo.html
+++ b/photo.html
@@ -76,7 +76,7 @@
       </section>
     </section>
     <footer class="main-footer">
-      <p class="main-footer__hash">#VISITSEDONA</p>
+      <p class="main-footer__hash">#visitsedona</p>
       <div class="main-footer__socials socials">
         <a class="socials__link" href="#">Twit</a>
         <a class="socials__link" href="#">FB</a>
@@ -85,7 +85,7 @@
       <div class="main-footer__copyright-wrap">
         <p class="main-footer__copyright">Разаботано</p>
         <a class="main-footer__copyright-img-layout" href="#">
-          <object class="main-footer__copyright-img" type="image/svg+xml" data="img/logo-htmlacademy.svg" width="27" height="34"></object>
+          <img class="main-footer__copyright-img" src="img/logo-htmlacademy.svg" width="27" height="34"></img>
         </a>
       </div>
     </footer>
