--- a/form.html
+++ b/form.html
@@ -109,7 +109,7 @@
       <div class="main-footer__copyright-wrap">
         <p class="main-footer__copyright">Разаботано</p>
         <a class="main-footer__copyright-img-layout" href="#">
-          <img class="main-footer__copyright-img" src="img/logo-htmlacademy.svg" width="27" height="34"></img>
+          <img class="main-footer__copyright-img" src="img/logo-htmlacademy.svg" width="27" height="34" alt="HTMLAcademy">
         </a>
       </div>
     </footer>
