--- a/photo.html
+++ b/photo.html
@@ -36,27 +36,35 @@
       <section class="media__photo photo">
         <figure class="photo__item">
           <img class="photo__img" src="img/photo-1-mobile@1x.jpg" alt="фото1" width="280" height="280">
-          <figcaption class="photo__title">Неродные просторы</figcaption>
-          <p class="photo__about">Автор фото: Борис</p>
-          <a class="photo__number-likes" href="#">1350</a>
+          <figcaption class="photo__description">
+            <h2 class="photo__title">Неродные просторы</h2>
+            <p class="photo__about">Автор фото: Борис</p>
+            <a class="photo__number-likes" href="#">1350</a>
+          </figcaption>
         </figure>
         <figure class="photo__item">
           <img class="photo__img" src="img/photo-2-mobile@1x.jpg" alt="фото2" width="280" height="280">
-          <figcaption class="photo__title">Местная растительность</figcaption>
-          <p class="photo__about">Автор фото: Сергей</p>
-          <a class="photo__number-likes" href="#">143</a>
+          <figcaption class="photo__description">
+            <h2 class="photo__title">Местная растительность</h2>
+            <p class="photo__about">Автор фото: Сергей</p>
+            <a class="photo__number-likes" href="#">143</a>
+          </figcaption>
         </figure>
         <figure class="photo__item">
           <img class="photo__img" src="img/photo-3-mobile@1x.jpg" alt="фото3" width="280" height="280">
-          <figcaption class="photo__title">Дорога на север</figcaption>
-          <p class="photo__about">Автор фото: Петр</p>
-          <a class="photo__number-likes" href="#">96</a>
+          <figcaption class="photo__description">
+            <h2 class="photo__title">Дорога на север</h2>
+            <p class="photo__about">Автор фото: Петр</p>
+            <a class="photo__number-likes" href="#">96</a>
+          </figcaption>
         </figure>
         <figure class="photo__item">
           <img class="photo__img" src="img/photo-4-mobile@1x.jpg" alt="фото4" width="280" height="280">
-          <figcaption class="photo__title">Мост дьявола</figcaption>
-          <p class="photo__about">Автор фото: Антон</p>
-          <a class="photo__number-likes" href="#">254</a>
+          <figcaption class="photo__description">
+            <h2 class="photo__title">Мост дьявола</h2>
+            <p class="photo__about">Автор фото: Антон</p>
+            <a class="photo__number-likes" href="#">254</a>
+          </figcaption>
         </figure>
       </section>
       <section class="media__video video">
@@ -85,7 +93,7 @@
       <div class="main-footer__copyright-wrap">
         <p class="main-footer__copyright">Разаботано</p>
         <a class="main-footer__copyright-img-layout" href="#">
-          <img class="main-footer__copyright-img" src="img/logo-htmlacademy.svg" width="27" height="34"></img>
+          <img class="main-footer__copyright-img" src="img/logo-htmlacademy.svg" width="27" height="34" alt="HTMLAcademy">
         </a>
       </div>
     </footer>
