--- a/photo.html
+++ b/photo.html
@@ -7,21 +7,18 @@
   </head>
   <body>
     <header class="main-header">
-      <nav class="main-header__navigation">
+      <nav class="main-header__navigation main-header__navigation--opened">
         <ul class="main-header__list">
           <li class="main-header__item"><a class="main-header__item-link" href="index.html">Главная</a></li>
           <li class="main-header__item"><a class="main-header__item-link">Фото и видео</a></li>
           <li class="main-header__item"><a class="main-header__item-link" href="form.html">Форма отзыва</a></li>
           <li class="main-header__item"><a class="main-header__item-link" href="#">HTML Academy</a></li>
         </ul>
+        <button class="main-header__toggle" type="button">Закрыть</button>
+        <a class="main-header__logo-wrap" href="index.html">
+          <img class="main-header__logo" src="img/logo-sedona-mobile.svg" alt="City Sedona" width="102" height="83">
+        </a>
       </nav>
-      <button class="main-header__close-menu">Закрыть</button>
-      <div class="main-header__menu-wrap">
-        <div class="main-header__logo">
-          <img src="img/logo-sedona-mobile.svg" alt="City Sedona" width="102" height="83">
-        </div>
-        <button class="main-header__menu-btn" type="button">Меню</button>
-      </div>
     </header>
     <div class="img-title">
       <div class="img-title__layout">
