finish index-page

--- a/index.html
+++ b/index.html
@@ -87,25 +87,31 @@
       </div>
     </section>
     <section class="location">
-      <h2 class="location__title">Заинтересовались?</h2>
-      <p class="location__about">Укажите предпологаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
-      <button class="location__button" type="button">Найти гостиницу</button>
+      <div class="location__wrap">
+        <h2 class="location__title">Заинтересовались?</h2>
+        <p class="location__about">Укажите предпологаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+        <button class="location__button" type="button">Найти гостиницу</button>
+      </div>
     </section>
     <div class="map">
       <div class="map__layout"></div>
     </div>
     <footer class="main-footer">
-      <p class="main-footer__hash">#visitsedona</p>
-      <div class="main-footer__socials socials">
-        <a class="socials__link" href="#">Twit</a>
-        <a class="socials__link" href="#">FB</a>
-        <a class="socials__link" href="#">Youtube</a>
-      </div>
-      <div class="main-footer__copyright-wrap">
-        <p class="main-footer__copyright">Разаботано</p>
-        <a class="main-footer__copyright-img-layout" href="#">
-          <img class="main-footer__copyright-img" src="img/logo-htmlacademy.svg" width="27" height="34" alt="HTMLAcademy">
-        </a>
+      <div class="main-footer__wrap">
+        <p class="main-footer__hash">#visitsedona</p>
+        <div class="main-footer__socials socials">
+          <div class="socials__wrap">
+            <a class="socials__link" href="#">Twit</a>
+            <a class="socials__link" href="#">FB</a>
+            <a class="socials__link" href="#">Youtube</a>
+          </div>
+        </div>
+        <div class="main-footer__copyright-wrap">
+          <p class="main-footer__copyright">Разаботано</p>
+          <a class="main-footer__copyright-img-layout" href="https://htmlacademy.ru">
+            <img class="main-footer__copyright-img" src="img/logo-htmlacademy.svg" width="27" height="34" alt="HTMLAcademy">
+          </a>
+        </div>
       </div>
     </footer>
   </body>
